// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert > renders with actions correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
        <!--v-if--><span data-slot="label" class="truncate">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with as correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`alert > renders with avatar correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-11 text-[22px] shrink-0"><img src="https://github.com/praburangki.png" width="44" height="44" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted w-48">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with close correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="shrink-0 size-5"></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`alert > renders with close slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with closeIcon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text-muted hover:color-text active:color-text disabled:color-text-muted aria-disabled:color-text-muted outline-inverted/25 focus-visible:outline-3 p-1.5 p-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="shrink-0 size-5"></svg>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`alert > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">Description</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">Description slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class="shrink-0 size-5"></svg>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Leading slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start color-text-highlighted bg-background ring ring-inset ring-default">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start color-text-highlighted bg-background-elevated/50">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start color-text-inverted bg-background-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start color-text-highlighted bg-background-elevated/50 ring ring-inset ring-ring-accented">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-center bg-primary color-text-inverted"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class="shrink-0 size-5"></svg>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">This is a description</div>
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
      <!--v-if--><span data-slot="label" class="truncate">Action</span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </div>
</div>"
`;

exports[`alert > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class="shrink-0 size-5"></svg>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">This is a description</div>
    <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 color-text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
        <!--v-if--><span data-slot="label" class="truncate">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start text-primary ring ring-inset ring-primary/25">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary/10 text-primary">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary/10 text-primary ring ring-inset ring-primary/25">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Title slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary color-text-inverted">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium font-bold">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
